# PyFD

./: README.md  launch.sh  pyproject.toml
pyfd/: data.py
pyfd/tree_shap/: leaf_treeshap.hpp  waterfall_treeshap.hpp
