[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfd"
authors = [
    {name = "Gabriel Laberge", email = "gabriel.laberge@polymtl.ca"},
]
description = "Functional Decompositions of Black-Boxes"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "graphviz>=0.20.3",
    "interpret-core>=0.6.5",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "shap>=0.44.1",
    "tqdm>=4.66.6",
    "xgboost>=2.1.2",
]
dynamic = ["version"]


[tool.setuptools]
py-modules = ["pyfd"]

[tool.setuptools.package-data]
pyfd = ["pyfd/tree_shap/*.cpp"]
